--- a/front-end/package.json
+++ b/front-end/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node ./bin/EZ-ICO"
+    "start": "node ./bin/ezContract"
   },
   "dependencies": {
     "body-parser": "^1.18.3",
